Overflow on text box is fixed

--- a/client/pyDraw.css
+++ b/client/pyDraw.css
@@ -29,3 +29,8 @@ html {
 #cm{
 	border: solid #ccc 1px;
 }
+
+pre {
+	overflow-x:visible;
+	overflow-y:visible;
+}
